# purplecaffeine

./: .buildinfo  .coveragerc  .envrc  .gitignore  .pylintrc  CITATION.cff  CONTRIBUTING.md  README.md  docker-compose.yml  ecosystem.json  genindex.html  index.html  objects.inv  paper.json  py-modindex.html  requirements-dev.txt  requirements.txt  search.html  searchindex.js  setup.py  tox.ini
.doctrees/: environment.pickle  index.doctree
.doctrees/apidocs/: index.doctree
.doctrees/guides/: 01_tracking_quantum_experiments.doctree  02_widget.doctree  03_tracking_qubo.doctree  04_setup_api.doctree  index.doctree
.doctrees/stubs/: purplecaffeine.ApiBackend.doctree  purplecaffeine.ApiStorage.doctree  purplecaffeine.BaseBackend.doctree  purplecaffeine.BaseStorage.doctree  purplecaffeine.LocalBackend.doctree  purplecaffeine.LocalStorage.doctree  purplecaffeine.Trial.doctree
.github/: dependabot.yml
.github/workflows/: api_server-dockerhub-release.yml  client-pypi-release.yml  docs.yml  draft-pdf.yml  ecosystem.yml  guides-tests.yml  lint.yml  tests.yml
_modules/: index.html
_modules/purplecaffeine/: backend.html  core.html  trail.html  trial.html
_sources/: index.rst.txt
_sources/guides/: 03_tracking_qubo.ipynb.txt  04_setup_api.ipynb.txt
_sources/stubs/: purplecaffeine.ApiBackend.rst.txt  (+6 more)
api_server/: .gitignore  README.md  manage.py  payloads.txt  requirements.txt  setup.sh  tests.py
apidocs/: index.html
client/: README.md  requirements.txt  setup.py
docs/: conf.py  index.rst  requirements-doc.txt
guides/: 01_tracking_quantum_experiments.html  01_tracking_quantum_experiments.ipynb  02_widget.html  03_tracking_qubo.html  04_setup_api.html  index.html
purplecaffeinewidget/: .coveragerc  .gitignore  MANIFEST.in  README.md  codecov.yml  install.json  package-lock.json  package.json  purple_caffeine_widget.json  pyproject.toml  pytest.ini  webpack.config.js
purplecaffeinewidget/.github/workflows/: build.yml
purplecaffeinewidget/css/: widget.css
purplecaffeinewidget/examples/: introduction.ipynb
purplecaffeinewidget/purple_caffeine_widget/: __init__.py  _frontend.py  _version.py  widget.py
purplecaffeinewidget/purple_caffeine_widget/nbextension/: extension.js
purplecaffeinewidget/purple_caffeine_widget/tests/: conftest.py  test_example.py  test_nbextension_path.py
purplecaffeinewidget/src/: extension.ts  index.ts  plugin.ts  version.ts  widget.ts
purplecaffeinewidget/src/__tests__/: index.spec.ts
purplecaffeinewidget/src/components/: widget_components.ts
purplecaffeinewidget/src/components/atomic_components/: atomic_components.ts  search_bar.ts  search_button.ts  trial_button.ts
purplecaffeinewidget/src/components/composite_components/: composite_component.ts  list_of_trials_buttons.ts  search_tool.ts
purplecaffeinewidget/src/components/utils/: trialButtonFactory.ts
stubs/: purplecaffeine.ApiBackend.html  purplecaffeine.ApiStorage.html  purplecaffeine.BaseBackend.html  purplecaffeine.BaseStorage.html  purplecaffeine.LocalBackend.html  purplecaffeine.LocalStorage.html  purplecaffeine.Trial.html
(+57 files in other folders)
